--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,7 +17,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
 ## Noted from Developer: This project you can runn with flutter 3.3.8 - 3.6.7 Veriosn
-version: 1.0.0+1
+version: 1.0.1+2
 
 environment:
   sdk: '>=2.18.4 <3.0.0'
@@ -56,6 +56,7 @@ dependencies:
   percent_indicator: ^4.2.3
   change_app_package_name: ^1.1.0
   dropdown_button2: ^2.1.4
+  flutter_stripe: ^9.5.0+1
 
 
 dev_dependencies:
